покращення промту. Покращення відображдення відповіді. покращенні нав панелі

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django>=3.2,<4.0
 gunicorn
 requests
 psycopg2-binary
-django-environ==0.8.1
+django-environ
 cryptography
 openai
+markdown2
+bleach
